--- a/requirements.txt
+++ b/requirements.txt
@@ -1,258 +1,57 @@
-aiohttp==3.9.1
-aiosignal==1.3.1
-altgraph==0.17.4
 annotated-types==0.7.0
-anyio==3.6.2
-arabic-reshaper==3.0.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asgiref==3.9.1
-asn1crypto==1.5.1
-astropy==6.0.1
-astropy-iers-data==0.2024.3.25.0.29.50
-asttokens==2.2.1
-attrs==23.1.0
-babel==2.17.0
-backcall==0.2.0
-beautifulsoup4==4.12.0
-bleach==6.0.0
+anyio==4.12.0
+asgiref==3.11.0
 brotli==1.2.0
-cachetools==5.4.0
-cattrs==23.1.2
-certifi==2022.12.7
+cachetools==6.2.4
+certifi==2025.11.12
 cffi==2.0.0
-chardet==5.2.0
-charset-normalizer==3.1.0
-click==8.1.7
-cobble==0.1.4
-colorama==0.4.6
-comm==0.1.3
-contourpy==1.1.0
-cryptography==46.0.3
+charset-normalizer==3.4.4
+click==8.3.1
 cssselect2==0.8.0
-cssutils==2.9.0
-cycler==0.11.0
-dataframe-image==0.2.3
-DateTime==5.3
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
-Django==4.2.24
-django-constance==4.3.2
-earthengine-api==0.1.415
-easyocr==1.7.1
-et-xmlfile==1.1.0
-executing==1.2.0
-exif==1.6.0
-Faker==20.1.0
-fastf1==3.0.6
-fastjsonschema==2.16.3
-filelock==3.15.4
-fonttools==4.41.0
-fpdf==1.7.2
-fqdn==1.5.1
-freetype-py==2.5.1
-frozenlist==1.4.0
-fsspec==2024.6.1
-geojson==3.1.0
-geomet==1.1.0
-google-api-core==2.19.1
-google-api-python-client==2.140.0
-google-auth==2.33.0
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.18.1
-google-crc32c==1.5.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.63.2
+DateTime==6.0
+deptry==0.24.0
+Django==6.0
+django-constance==4.3.4
+fonttools==4.61.1
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.45.0
+google-auth-httplib2==0.3.0
+googleapis-common-protos==1.72.0
 googlemaps==4.10.0
-h11==0.14.0
-html2image==2.0.4.3
-html2text==2024.2.26
-html5lib==1.1
-httpcore==1.0.7
-httplib2==0.22.0
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
-idna==3.4
-imageio==2.35.1
-insta-scrape==2.1.2
-ipykernel==6.23.0
-ipython==8.13.2
-ipython-genutils==0.2.0
-isoduration==20.11.0
-jedi==0.18.2
-Jinja2==3.1.2
-jiter==0.8.2
-joblib==1.3.2
-jplephem==2.21
-jsonpickle==4.0.5
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyter_server==2.5.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-kiwisolver==1.4.4
-lazy_loader==0.4
-llvmlite==0.44.0
-lxml==6.0.2
-mammoth==1.9.0
-markdownify==0.14.1
-markitdown==0.0.1a3
-MarkupSafe==2.1.2
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mistune==2.0.5
-more-itertools==10.6.0
-mpmath==1.3.0
-multidict==6.0.4
-music21==9.5.0
-nbclassic==1.0.0
-nbclient==0.7.4
-nbconvert==7.4.0
-nbformat==5.8.0
-nest-asyncio==1.5.6
-networkx==3.3
-ninja==1.11.1.1
-notebook==6.5.4
-notebook_shim==0.2.3
-numba==0.61.0
-numpy==1.25.0
-openai==1.60.0
-openai-whisper==20240930
-opencv-contrib-python==4.8.0.76
-opencv-python-headless==4.10.0.84
-openpyxl==3.1.2
-oscrypto==1.3.0
-packaging==23.1
-pandas==2.1.4
-pandocfilters==1.5.0
-parse==1.19.1
-parso==0.8.3
-pathvalidate==3.2.3
-pdf2image==1.17.0
-pdfminer.six==20231228
-pdfplumber==0.11.4
-pefile==2024.8.26
-pickleshare==0.7.5
-piexif==1.1.3
-Pillow==10.0.0
-platformdirs==3.5.0
-plotly==5.15.0
-plum-py==0.8.6
-poppler-utils==0.1.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-proto-plus==1.24.0
-protobuf==5.27.3
-psutil==5.9.5
-pure-eval==0.2.2
-puremagic==1.28
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycairo==1.29.0
-pyclipper==1.3.0.post5
-pycparser==2.21
-pydantic==2.12.4
+idna==3.11
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+packaging==25.0
+pillow==12.0.0
+proto-plus==1.27.0
+protobuf==6.33.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.12.5
 pydantic_core==2.41.5
-pydub==0.25.1
-pydyf==0.11.0
-pyerfa==2.0.1.1
-Pygments==2.15.1
-pyHanko==0.32.0
-pyhanko-certvalidator==0.29.0
-pyinstaller==6.10.0
-pyinstaller-hooks-contrib==2024.8
-pyparsing==3.0.9
-pypdf==5.0.1
-PyPDF2==3.0.1
-pypdfium2==4.30.0
-pyperclip==1.8.2
+pydyf==0.12.1
+pyparsing==3.2.5
 pyphen==0.17.2
-PyQRCode==1.2.1
-pyrsistent==0.19.3
-pytesseract==0.3.10
-python-bidi==0.6.0
-python-dateutil==2.8.2
-python-dotenv==1.1.1
-python-json-logger==2.0.7
-python-pptx==1.0.2
-pytz==2023.3
-pywin32==306
-pywin32-ctypes==0.2.3
-pywinpty==2.0.10
-PyYAML==6.0
-pyzmq==25.0.2
-qrcode==8.0
-RapidFuzz==3.14.3
-regex==2024.11.6
-reportlab==4.4.5
+python-dotenv==1.2.1
+pytz==2025.2
 requests==2.32.5
-requests-cache==1.1.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rlPyCairo==0.4.0
-rsa==4.9
-scikit-image==0.24.0
-scikit-learn==1.4.1.post1
-scipy==1.11.1
-seaborn==0.12.2
-Send2Trash==1.8.2
-sentinelsat==1.2.1
-sgp4==2.23
-shapely==2.0.6
-six==1.16.0
-skyfield==1.48
-sniffio==1.3.0
-soupsieve==2.4
-SpeechRecognition==3.14.0
-sqlparse==0.5.3
-stack-data==0.6.2
-sumup==0.0.12
-svglib==1.6.0
-sympy==1.13.1
-tenacity==8.2.2
-terminado==0.17.1
-thefuzz==0.19.0
-threadpoolctl==3.3.0
-tifffile==2024.8.30
-tiktoken==0.9.0
-times==0.7
-timple==0.1.6
+requirements-parser==0.13.0
+rsa==4.9.1
+sqlparse==0.5.5
+sumup==0.0.16
 tinycss2==1.5.1
 tinyhtml5==2.0.0
-tkcalendar==1.6.1
-torch==2.6.0
-torchaudio==2.6.0
-torchvision==0.21.0
-tornado==6.3.1
-tqdm==4.66.5
-traitlets==5.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2023.3
-tzlocal==5.3.1
-uri-template==1.2.0
-uritemplate==4.1.1
-uritools==5.0.0
-url-normalize==1.4.3
-urllib3==1.26.15
-wcwidth==0.2.6
-weasyprint==66.0
-webcolors==1.13
+uritemplate==4.2.0
+urllib3==2.6.2
+weasyprint==67.0
 webencodings==0.5.1
-websocket-client==1.5.1
-websockets==11.0.3
-wordcloud==1.9.4
-xhtml2pdf==0.2.17
-xlrd==2.0.1
-XlsxWriter==3.2.1
-yarl==1.9.4
-youtube-transcript-api==0.6.3
-yt-dlp==2025.3.21
-zope.interface==6.1
+zope.interface==8.1.1
 zopfli==0.4.0
